ficxed layout issue

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 .jumbotron {
 background-size: cover;
 height: 70%;
-background-position: center center;
+justify-content: center;
 }
 
 #paint1{
